--- a/.github/workflows/react-native-ci-cd.yml
+++ b/.github/workflows/react-native-ci-cd.yml
@@ -160,10 +160,9 @@ jobs:
         run: npm install
 
       - name: Install Fastlane
-        run: |
-          cd android
-          bundle install
-          bundle exec fastlane --version
+        run: sudo gem install fastlane -NV 
+        #   bundle install
+        #   bundle exec fastlane --version
         #   bundle exec fastlane add_plugin firebase_app_distribution
         #   sudo chmod -R a+r /Library/Ruby/Gems/2.6.0/gems/fastlane-plugin-firebase_app_distribution-0.1.4
         #   bundle exec fastlane add_plugin firebase_app_distribution
@@ -173,5 +172,6 @@ jobs:
       - name: Deploy to firebase
         run: |
           cd android
-          bundle exec fastlane distribute_to_firebase
+          fastlane distribute_to_firebase
+        #   bundle exec fastlane distribute_to_firebase
 
