--- a/.github/workflows/react-native-ci-cd.yml
+++ b/.github/workflows/react-native-ci-cd.yml
@@ -160,7 +160,11 @@ jobs:
         run: npm install
 
       - name: Install Fastlane
-        run: sudo gem install fastlane -NV 
+        run: |
+          sudo gem install fastlane -NV
+          fastlane add_plugin firebase_app_distribution
+          sudo chmod -R a+r /Library/Ruby/Gems/2.6.0/gems/fastlane-plugin-firebase_app_distribution-0.1.4
+          fastlane add_plugin firebase_app_distribution
         #   bundle install
         #   bundle exec fastlane --version
         #   bundle exec fastlane add_plugin firebase_app_distribution
