--- a/.github/workflows/react-native-ci-cd.yml
+++ b/.github/workflows/react-native-ci-cd.yml
@@ -155,6 +155,11 @@ jobs:
     #       echo "app_id = '${{ secrets.FIREBASE_APP_ID }}'" >> fastlane/Appfile
     #       echo "groups = '${{ 'testergroup' }}'" >> fastlane/Appfile
 
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.1'
+          bundler-cache: true
             
       - name: Install Node.js dependencies
         run: npm install
