--- a/.github/workflows/react-native-ci-cd.yml
+++ b/.github/workflows/react-native-ci-cd.yml
@@ -163,6 +163,16 @@ jobs:
     #       echo "app_id = '${{ secrets.FIREBASE_APP_ID }}'" >> fastlane/Appfile
     #       echo "groups = '${{ 'testergroup' }}'" >> fastlane/Appfile
 
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.1'
+          bundler-cache: true
+          working-directory: android
+
+      - name: Install Node.js dependencies
+        run: npm install
+    
       - name: Configure Fastlane
         env:
           FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
@@ -173,14 +183,7 @@ jobs:
           echo "package_name = 'com.rnmodules'" >> fastlane/Appfile
           echo "firebase_app_id = '${FIREBASE_APP_ID}'" >> fastlane/Appfile
 
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1'
-          bundler-cache: true
-            
-      - name: Install Node.js dependencies
-        run: npm install
+    
 
       - name: Install Fastlane
         run: |
@@ -199,11 +202,13 @@ jobs:
         #   sudo gem install fastlane -NV 
 
       - name: Run Fastlane
+        working-directory: android
         env:
-          FIREBASE_CLI_TOKEN: ${{ secrets.FIREBASE_CLI_TOKEN }}
+          FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+          FIREBASE_CLI_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
           BUILD_ARTIFACT: ${{ steps.find_artifact.outputs.apk_path || steps.find_artifact.outputs.aab_path }}
         run: |
-          cd android && bundle exec fastlane distribute_to_firebase
+          bundle exec fastlane distribute_to_firebase
 
     #   - name: Deploy to firebase
     #     run: |
